# scaleway-api-rs

./: .gitignore  .openapi-generator-ignore  Cargo.toml  Cargo.toml.template  README.md  UPDATE.md  generate_api.sh  openapi-generator-config.yml
.generation/: consolidated-specs.yml  openapi-merge.json  scaleway.account.v2.Api.yml  scaleway.baremetal.v1.Api.yml  scaleway.billing.v2alpha1.Api.yml  scaleway.domain.v2beta1.Api.yml  scaleway.flexible_ip.v1alpha1.Api.yml  scaleway.iam.v1alpha1.Api.yml  scaleway.instance.v1.Api.yml  scaleway.k8s.v1.Api.yml  scaleway.rdb.v1.Api.yml  scaleway.registry.v1.Api.yml  scaleway.vpc.v1.Api.yml
.github/: dependabot.yml
.github/workflows/: publish-crate.yml  rust.yml
docs/: ACLApi.md  AccessControlListApi.md  AclApi.md  AclsApi.md  AddClusterAclRulesRequest.md  AddGroupMemberRequest.md  AddInstanceAclRulesRequest.md  AddInstanceSettingsRequest.md  AddOptionServerRequest.md  AlertSubscribersApi.md  ApiKeysApi.md  ApplicationsApi.md  AttachFlexibleIpRequest.md  BETAPrivateNetworkApi.md  BMCAccessApi.md  BackendsApi.md  BackupsApi.md  BmcAccessApi.md  BootscriptsApi.md  CertificateApi.md  CloneDnsZoneRequest.md  CloneInstanceRequest.md  ClusterTypesApi.md  ClustersApi.md  ConsumptionApi.md  CreateApiKeyRequest.md  CreateApplicationRequest.md  CreateClusterRequest.md  CreateClusterRequestAutoUpgrade.md  CreateClusterRequestAutoUpgradeMaintenanceWindow.md  CreateClusterRequestAutoscalerConfig.md  CreateClusterRequestAutoscalerConfigScaleDownUtilizationThreshold.md  CreateClusterRequestOpenIdConnectConfig.md  CreateDatabaseBackupRequest.md  CreateDatabaseRequest.md  CreateDeviceRequest.md  CreateDeviceRequestMessageFilters.md  CreateDeviceRequestMessageFiltersPublish.md  CreateDeviceRequestMessageFiltersSubscribe.md  CreateDnsZoneRequest.md  (+976 more)
src/apis/: access_control_list_api.rs  acl_api.rs  acls_api.rs  alert_subscribers_api.rs  api_keys_api.rs  applications_api.rs  backends_api.rs  backups_api.rs  beta_private_network_api.rs  bmc_access_api.rs  bootscripts_api.rs  certificate_api.rs  cluster_types_api.rs  clusters_api.rs  configuration.rs  consumption_api.rs  database_instances_api.rs  databases_api.rs  default_api.rs  dns_zones_api.rs  endpoints_api.rs  engines_api.rs  flexible_ip_api.rs  frontends_api.rs  groups_api.rs  images_api.rs  imports_exports_api.rs  instance_settings_api.rs  invoices_api.rs  io_t_cloud_twins_api.rs  io_t_devices_api.rs  io_t_hubs_api.rs  io_t_networks_api.rs  io_t_routes_api.rs  ips_api.rs  load_balancer_api.rs  mod.rs  namespaces_api.rs  node_types_api.rs  nodes_api.rs  (+30 more)
src/models/: _domain_v2beta1_dns_zones__dns_zone__import_provider_online_v1.rs  _instance_v1_zones__zone__volumes__id__server.rs  _iot_v1_regions__region__devices__device_id__message_filters.rs  _lb_v1_regions__region__routes_match.rs  (+938 more)
templates/: .gitignore.template  README.prepend.md
