[package]
name = "scaleway_api_rs"
version = "0.1.7"
authors = ["Qovery Team", "OpenAPI Generator team and contributors"]
description = "Generated library to interact with Scaleway API."
repository = "https://github.com/Qovery/scaleway-api-rs"
homepage = "https://github.com/Qovery/scaleway-api-rs"
documentation = "https://docs.rs/scaleway_api_rs/"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"

[lib]
name = "scaleway_api_rs"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[dependencies]
serde = ">=1"
serde_derive = ">=1"
serde_json = ">=1"
serde_with = ">=3"
url = ">=2"
reqwest = { version = ">=0.12.0", features = ["json", "multipart", "rustls-tls-native-roots", "gzip"] }

[dev-dependencies]
