[package]
name = "scaleway_api_rs"
version = "0.1.2"
authors = ["Qovery Team", "OpenAPI Generator team and contributors"]
description = "Generated library to interact with Scaleway API."
repository = "https://github.com/Qovery/scaleway-api-rs"
homepage = "https://github.com/Qovery/scaleway-api-rs"
documentation = "https://docs.rs/scaleway_api_rs/0.1.0/scaleway_api_rs/"
readme = "README.md"
license-file = "LICENSE"
edition = "2018"

[lib]
name = "scaleway_api_rs"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
crate-type = ["lib"]
required-features = []

[dependencies]
serde = { version = ">=1", features = ["serde_derive"] }
serde_json = ">=1"
serde_with = ">=3"
url = ">=2"
serde_repr = ">=0.1"
reqwest = { version = ">=0.12.12", features = ["json", "multipart", "rustls-tls-native-roots-no-provider", "gzip"] }

[dev-dependencies]
